@@ -1,4 +1,5 @@
 3.0.17
+ * Restore resumable hints delivery, backport CASSANDRA-11960 (CASSANDRA-14419)
  * Fix regression of lagging commitlog flush log message (CASSANDRA-14451)
  * Add Missing dependencies in pom-all (CASSANDRA-14422)
  * Cleanup StartupClusterConnectivityChecker and PING Verb (CASSANDRA-14447)
